aws/rolling/infrastructure/modules/exposed_containerized_service/networking.tf
resource "aws_security_group" "ecs_tasks" {
  name        = "${local.service_name}-ecs"
  description = "allow inbound access from the ALB only"
  vpc_id      = var.vpc_id

  ingress {
    protocol        = "tcp"
    from_port       = var.container_port
    to_port         = var.container_port
    cidr_blocks     = ["0.0.0.0/0"]
    security_groups = [aws_security_group.lb.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

locals {
    distinct_security_group_ids = distinct(concat([aws_security_group.ecs_tasks.id], var.additional_ecs_task_security_group_ids))
}
